--- a/AdoptionAssist/src/main/java/UserInterface/BankManager/ViewLoanRequest.form
+++ b/AdoptionAssist/src/main/java/UserInterface/BankManager/ViewLoanRequest.form
@@ -238,6 +238,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnBrowse">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="cc" red="cc" type="rgb"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="VIEW"/>
           </Properties>
           <Events>
