UI refactoring and Validations

--- a/ChildAdoptionSystem/src/userinterface/BirthMotherRole/BirthMotherWorkAreaJPanel.form
+++ b/ChildAdoptionSystem/src/userinterface/BirthMotherRole/BirthMotherWorkAreaJPanel.form
@@ -3,7 +3,7 @@
 <Form version="1.5" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="b6" green="97" red="40" type="rgb"/>
+      <Color blue="ff" green="cc" red="cc" type="rgb"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -104,7 +104,7 @@
     <Component class="javax.swing.JButton" name="viewParentsJButton">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="99" red="ff" type="rgb"/>
+          <Color blue="0" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="View Parent Directory"/>
       </Properties>
@@ -115,7 +115,7 @@
     <Component class="javax.swing.JButton" name="viewBankDetails">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="99" red="ff" type="rgb"/>
+          <Color blue="0" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="View Bank Details"/>
       </Properties>
@@ -126,7 +126,7 @@
     <Component class="javax.swing.JButton" name="btnCreateLoan">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="99" red="ff" type="rgb"/>
+          <Color blue="0" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Create Loan Request"/>
       </Properties>
@@ -137,7 +137,7 @@
     <Component class="javax.swing.JButton" name="btnCreateInsurance">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="99" red="ff" type="rgb"/>
+          <Color blue="0" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Insurance "/>
       </Properties>
@@ -164,7 +164,7 @@
     <Component class="javax.swing.JButton" name="updateProfile">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="99" red="ff" type="rgb"/>
+          <Color blue="0" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="View/Update Profile"/>
       </Properties>
