--- a/ChildAdoptionSystem/src/userinterface/Dashboard/ParentDashboard.form
+++ b/ChildAdoptionSystem/src/userinterface/Dashboard/ParentDashboard.form
@@ -27,7 +27,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="userProcessContainer" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="76" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -82,7 +82,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btnHelp" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="jPanel1" alignment="0" pref="300" max="32767" attributes="0"/>
+                      <Component id="jPanel1" alignment="0" pref="306" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="thirdPanel" min="-2" max="-2" attributes="0"/>
@@ -296,7 +296,7 @@
                               <Component id="lblEmail" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="44" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
