--- a/ChildAdoptionSystem/src/userinterface/BirthMotherRole/ViewParentApplication.form
+++ b/ChildAdoptionSystem/src/userinterface/BirthMotherRole/ViewParentApplication.form
@@ -221,7 +221,7 @@
     <Component class="javax.swing.JButton" name="btnAccept">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="99" red="ff" type="rgb"/>
+          <Color blue="0" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Lucida Grande" size="18" style="1"/>
