--- a/ChildAdoptionSystem/src/userinterface/Register/registerFamily.form
+++ b/ChildAdoptionSystem/src/userinterface/Register/registerFamily.form
@@ -13,7 +13,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="b6" green="97" red="40" type="rgb"/>
+      <Color blue="ff" green="cc" red="cc" type="rgb"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -282,7 +282,7 @@
     <Component class="javax.swing.JButton" name="btnConfirm">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="99" red="ff" type="rgb"/>
+          <Color blue="0" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Lucida Grande" size="13" style="1"/>
@@ -295,7 +295,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
-        <Property name="text" type="java.lang.String" value="You are prepared for the &#x201c;worst case scenario.&#x201d;"/>
+        <Property name="text" type="java.lang.String" value="Are you ready to handle any type of scenario?"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="isPrepared">
@@ -307,10 +307,13 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="No"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="notPreparedActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
-        <Property name="text" type="java.lang.String" value="You are financially prepared for the child."/>
+        <Property name="text" type="java.lang.String" value="Are you financially ready for the child?"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="isFinance">
@@ -330,7 +333,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
-        <Property name="text" type="java.lang.String" value="You are able or willing to make BIG changes."/>
+        <Property name="text" type="java.lang.String" value="Are you ready for big changes?"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="notBigChange">
@@ -340,7 +343,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Your partner is comfortable with the situation."/>
+        <Property name="text" type="java.lang.String" value="Is your spouse onboard with the situation?"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="notComfortable">
@@ -360,7 +363,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel9">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Your current children are on board with the situation."/>
+        <Property name="text" type="java.lang.String" value="Are your current children onboard with the situation? "/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="notOnBoardChildren">
@@ -370,7 +373,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel10">
       <Properties>
-        <Property name="text" type="java.lang.String" value="You are educated about the realities of the type of adoption you are pursuing."/>
+        <Property name="text" type="java.lang.String" value="Do you have knowledge about the adoption process?"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="isEducated">
@@ -385,7 +388,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel11">
       <Properties>
-        <Property name="text" type="java.lang.String" value="You plan to make promises or commitments you actually can or will keep"/>
+        <Property name="text" type="java.lang.String" value="Will you be committed to your promises?"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="isPromise">
@@ -400,7 +403,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel12">
       <Properties>
-        <Property name="text" type="java.lang.String" value="You want to say &#x201c;yes&#x201d; not out of guilt."/>
+        <Property name="text" type="java.lang.String" value="Are you adopting out of guilt?"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="notGuilty">
