--- a/ChildAdoptionSystem/src/userinterface/loginScreens/loginOptions.form
+++ b/ChildAdoptionSystem/src/userinterface/loginScreens/loginOptions.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="b6" green="97" red="40" type="rgb"/>
+      <Color blue="ff" green="cc" red="cc" type="rgb"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -24,20 +24,17 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="btnFamily" min="-2" pref="264" max="-2" attributes="0"/>
                   <Component id="btnAdmin" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
                   <Component id="btnMother" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="btnFamily" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
-                  <Component id="btnCounselor" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+              <EmptySpace pref="345" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="btnFinance" pref="264" max="32767" attributes="0"/>
-                  <Component id="btnFinance1" max="32767" attributes="0"/>
+                  <Component id="btnCounselor" alignment="0" min="-2" pref="264" max="-2" attributes="0"/>
+                  <Component id="btnFinance" max="32767" attributes="0"/>
+                  <Component id="btnFinance1" min="-2" pref="264" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="50" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -47,16 +44,19 @@
               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnAdmin" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnFamily" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnFinance" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnMother" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnCounselor" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnFinance1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="227" max="32767" attributes="0"/>
+              <EmptySpace min="46" pref="46" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="btnFamily" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnCounselor" alignment="0" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
