Refactoring orphanages directory and enterprise

--- a/ChildAdoptionSystem/src/userinterface/Register/registerOptions.form
+++ b/ChildAdoptionSystem/src/userinterface/Register/registerOptions.form
@@ -24,10 +24,11 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="btnOrphanageReg" pref="264" max="32767" attributes="0"/>
                   <Component id="btnRegFamily" max="32767" attributes="0"/>
                   <Component id="btnRegMother" pref="264" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="175" max="32767" attributes="0"/>
+              <EmptySpace pref="419" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -38,7 +39,9 @@
               <Component id="btnRegMother" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
               <Component id="btnRegFamily" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="74" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
+              <Component id="btnOrphanageReg" min="-2" pref="94" max="-2" attributes="0"/>
+              <EmptySpace pref="108" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -70,6 +73,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegFamilyActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnOrphanageReg">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Orphan"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOrphanageRegActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
