--- a/ChildAdoptionSystem/src/userinterface/InsuranceManger/ViewInsuranceApplicationWorkAreaJPanel.form
+++ b/ChildAdoptionSystem/src/userinterface/InsuranceManger/ViewInsuranceApplicationWorkAreaJPanel.form
@@ -112,7 +112,7 @@
     <Component class="javax.swing.JButton" name="viewBirthMother">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="cc" red="cc" type="rgb"/>
+          <Color blue="0" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Lucida Grande" size="14" style="1"/>
