--- a/ChildAdoptionSystem/src/userinterface/Register/registerOptions.form
+++ b/ChildAdoptionSystem/src/userinterface/Register/registerOptions.form
@@ -21,27 +21,27 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="btnOrphanageReg" pref="264" max="32767" attributes="0"/>
-                  <Component id="btnRegFamily" max="32767" attributes="0"/>
-                  <Component id="btnRegMother" pref="264" max="32767" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace pref="34" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="btnOrphanageReg" linkSize="1" min="-2" pref="264" max="-2" attributes="0"/>
+                  <Component id="btnRegFamily" linkSize="1" min="-2" pref="264" max="-2" attributes="0"/>
+                  <Component id="btnRegMother" linkSize="1" min="-2" pref="264" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="419" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="571" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <EmptySpace min="-2" pref="112" max="-2" attributes="0"/>
-              <Component id="btnRegMother" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-              <Component id="btnRegFamily" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
-              <Component id="btnOrphanageReg" min="-2" pref="94" max="-2" attributes="0"/>
-              <EmptySpace pref="108" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="178" max="-2" attributes="0"/>
+              <Component id="btnRegMother" linkSize="2" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <Component id="btnRegFamily" linkSize="2" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <Component id="btnOrphanageReg" linkSize="2" min="-2" pref="94" max="-2" attributes="0"/>
+              <EmptySpace pref="35" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -50,7 +50,7 @@
     <Component class="javax.swing.JButton" name="btnRegMother">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Lucida Grande" size="11" style="1"/>
+          <Font name="Tahoma" size="14" style="1"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/Images/maternity.png"/>
@@ -64,7 +64,7 @@
     <Component class="javax.swing.JButton" name="btnRegFamily">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Lucida Grande" size="11" style="1"/>
+          <Font name="Tahoma" size="14" style="1"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/Images/family.png"/>
@@ -77,7 +77,13 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnOrphanageReg">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Orphan"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="1"/>
+        </Property>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/Images/baby-3.png"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="ORPHAN"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOrphanageRegActionPerformed"/>
