--- a/ChildAdoptionSystem/src/userinterface/SystemAdminWorkArea/SystemAdminWorkAreaJPanel.form
+++ b/ChildAdoptionSystem/src/userinterface/SystemAdminWorkArea/SystemAdminWorkAreaJPanel.form
@@ -155,7 +155,7 @@
             <Component class="javax.swing.JButton" name="btnManageEnterprise">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="33" green="99" red="ff" type="rgb"/>
+                  <Color blue="0" green="cc" red="cc" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Lucida Grande" size="14" style="1"/>
